feat: 字符串操作

--- a/md/04.字符串.md
+++ b/md/04.字符串.md
@@ -37,4 +37,37 @@ print("\(str3)")
  \0（空字符）、\\（反斜杠）、\t（制表符）、\n（换行符）、\r（回车符）、\"（双引号）、\'（单引号）
  */
 
+// 5. 字符串的可变性
+
+var str = "abc" // 允许修改
+str += "bcd"
+
+let str1 = "abc" // 不允许被修改
+
+// 6. 字符串是值类型传递
+var str = "abc"
+var str1 = str
+
+print("\(str == str1)") // true
+
+// 6. 操作字符
+
+// 6.1 for...in 遍历字符串
+for(char in "abcd") {
+    print("\(char)")
+}
+
+// 6.2 Character 类型
+var str: [Character] = ["a", "b", "c"]
+
+/**
+ * 7. 字符串拼接
+ * +、+=、String 类型的 append 方法，追加 Character 值
+**/
+
+// 8.字符串插值
+var str = "robbie"
+let str1 = "name: \(str)"
+let str2 = #"name: \(str)"# // Row String 不会解析插值内容
+let str3 = #"name: \#(str)"# // 需要使用 \# 解析  Row String 数据
 ```
