feat: 字符串插入删除

--- a/md/04.字符串.md
+++ b/md/04.字符串.md
@@ -70,4 +70,33 @@ var str = "robbie"
 let str1 = "name: \(str)"
 let str2 = #"name: \(str)"# // Row String 不会解析插值内容
 let str3 = #"name: \#(str)"# // 需要使用 \# 解析  Row String 数据
+
+// 9. 字符串索引-第一个字符
+var str = "abcdefg"
+print("first char: \(str[str.startIndex])") // "a"
+
+// 10. 字符串索引-最后一个字符
+var str = "abcdefg"
+print("last char: \(str[str.index(before: str.endIndex)])") // "g"
+
+// 11. 插入一个字符
+var str = "abc"
+str.insert("!", at: str.endIndex)
+print("\(str)") // "abc!"
+
+// 12. 插入字符串
+var str = "abc"
+str.insert(contentsOf: "123", at: str.index(before: str.endIndex))
+print("\(str)") // "abc123"
+
+// 13. 删除字符
+var str = "abc!"
+str.remove(at: str.index(before: str.endIndex))
+print("\(str)") // "abc"
+
+// 14. 删除字符串
+var str = "abc 123!"
+let range = str.index(str.endIndex. offsetBy: -5)..<str.endIndex
+str.removeSubrange(range)
+print("\(str)") // abc
 ```
