faet: 字符串比较

--- a/md/04.字符串.md
+++ b/md/04.字符串.md
@@ -99,4 +99,28 @@ var str = "abc 123!"
 let range = str.index(str.endIndex. offsetBy: -5)..<str.endIndex
 str.removeSubrange(range)
 print("\(str)") // abc
+
+// 15. 子字符串
+let str = "abc,123"
+let index = str.index(of: ",") ?? str.endIndex // 查找 "," 位置，如果没有返回 endIndex
+let subString = str[..<index]
+print("\(subString)") // "abc"
+
+let str1 = String(subString)
+print("\(str1)") // "abc"
+
+// 16. 字符串比较
+let str = "abc,123"
+let index = str.index(of: ",") ?? str.endIndex // 查找 "," 位置，如果没有返回 endIndex
+let subString = str[..<index]
+print("\(subString)") // "abc"
+
+let str1 = String(subString)
+print("\(str == str1)") // false
+// 前缀比较
+print(str.hasPrefix("abc")) // true
+// 后缀比较
+print(str.hasSuffix("123")) // true
+
+
 ```
