--- a/md/07.区间运算符.md
+++ b/md/07.区间运算符.md
@@ -2,5 +2,46 @@
 
 
 ```swift
+/**
+ 区间运算符
+ */
+
+// 1.闭区间 ...
+let range = 0...10
+for i in range {
+    print("\(i)") // 打印: 0-10
+}
+
+// 2.半开区间 ..<
+let ages = ["a1", "a2", "a3", "a4"]
+let count = ages.count
+
+for  index in 0..<count {
+    print("\(ages[index])")
+}
+
+// 3.单侧区间 n..., ...m
+let names = ["a1", "b1", "c1", "c2"]
+for name in names[...1] {
+    print("\(name)") // a1 b1
+}
+for name in names[2...] {
+    print("\(name)") // c1 f2
+}
+
+// 4.字符区间
+let str = "abc123def"
+let char_range = "a"..."z"
+for char in str {
+    if(!char_range.contains(String(char))) {
+        print("\(char) 不是字符")
+    }
+}
+
+// 5.倒序索引
+let reverse_range = (0...10).reversed()
+for index in reverse_range {
+    print("\(index)")
+}
 
 ```
