feat: 数组的遍历

--- a/md/16.创建数组的方式.md
+++ b/md/16.创建数组的方式.md
@@ -18,4 +18,31 @@ let arr4 = Array<String>(repeating: "s",count: 5)
 let person = ["zhangsan": 10, "lisi": 12, "wangwu": 14]
 let arr5 = [String](person.keys)
 print(arr5)
+
+// 数组的遍历
+let arr = Array(2...4)
+
+// forEach
+arr.forEach { (item) in
+    // 不允许使用 break、continue
+    print(item)
+}
+
+// enumerated(推荐)
+for (index,item) in arr.enumerated() {
+    print("\(index): \(item)")
+}
+
+// 等价于 [0,arr.count)
+for i in 0..<arr.count {
+    print("\(i): \(arr[i])")
+}
+
+// 迭代器
+var it = arr.makeIterator()
+
+while let item = it.next() {
+    print(item)
+}
+
 ```
