--- a/md/16.创建数组的方式.md
+++ b/md/16.创建数组的方式.md
@@ -1,11 +1,7 @@
 # 创建数组的方式
 
-
+## 创建数组
 ```swift
-/**
- 创建数组的方式
- */
-
 // 1.字面量创建
 let arr = [1,2,3,4,5]
 // 创建空数组时，需要指定数组类型
@@ -18,6 +14,11 @@ let arr4 = Array<String>(repeating: "s",count: 5)
 let person = ["zhangsan": 10, "lisi": 12, "wangwu": 14]
 let arr5 = [String](person.keys)
 print(arr5)
+```
+
+## 数组遍历
+
+```swift
 
 // 数组的遍历
 let arr = Array(2...4)
@@ -44,5 +45,63 @@ var it = arr.makeIterator()
 while let item = it.next() {
     print(item)
 }
+
+```
+
+## 数组查找
+
+```swift
+// 数组查找
+let arr:Array<Int> = [10,29,14,30,24,55]
+
+// contains
+print(arr.contains(30)) // true
+// contains where
+print(arr.contains(where: {$0 == 30}))
+// allSatisfy
+print(arr.allSatisfy({$0 > 9}))
+// first、last
+print(arr.first) // 10
+print(arr.last) // 55
+print(arr.first(where: {$0 > 30}))
+// firstIndex、lastIndex
+print(arr.firstIndex(of: 30)) // 3
+print(arr.lastIndex(of: 29)) // 1
+print(arr.firstIndex(where: {$0 == 14})) // 2
+// min、max
+print(arr.min()) // 10
+print(arr.max()) // 55
+let errors = [(200, "ok"),(400, "not found"),(500, "server error")]
+print(errors.min(by: {
+    (a,b) -> Bool in a.0 < b.0
+})) // 200,ok
+
+```
+
+## 数组添加、删除
+
+```swift
+
+// 数组添加或删除
+var arr = [1]
+// append
+// 插入单个数据
+arr.append(2)
+// 插入多个数据
+arr.append(contentsOf: 3...5)
+// insert
+arr.insert(0, at: 0)
+arr.insert(contentsOf: 6...8, at: 6)
+// remove
+let value = arr.remove(at: 1) // value: 1
+let value1 = arr.removeFirst() // value1: 0
+let value2 = arr.removeLast() // value2: 8
+let value3 = arr.popLast() // value3: 7
+// removeSubrange
+arr.removeSubrange(1...3)
+// removeAll
+arr.removeAll()
+print(arr)
+print(arr.capacity) // 12
 
 ```
