--- a/md/16.创建数组的方式.md
+++ b/md/16.创建数组的方式.md
@@ -105,3 +105,32 @@ print(arr)
 print(arr.capacity) // 12
 
 ```
+
+## 数组切片
+
+```swift
+
+// 数组切片
+var array:[Int] = [10,20,14,8,30,21]
+// dropFirst
+var first: ArraySlice<Int> = array.dropFirst() // [20,14,8,30,21]
+var first3 = array.dropFirst(3) // [8,30,21]
+// drop
+var dropwhile = array.drop(while: {$0 <= 20}) // [30, 21]
+// prefix
+var prefix = array.prefix(3) // [10, 20, 14]
+var prefixupto = array.prefix(upTo: 3) // [10, 20, 14]
+var prefixwhile = array.prefix(while: { $0 < 30 }) // [10, 20, 14, 8]
+// suffix
+var suffix = array.suffix(3) // [8, 30, 21]
+var suffixfrom = array.suffix(from: 2) // [14, 8, 30, 21]
+// range
+var range = array[2...4] // [14, 8, 30]
+var range1 = array[2..<4] // [14, 8]
+var range2 = array[...4] // [10, 20, 14, 8, 30]
+var range3 = array[..<4] // [10, 20, 14, 8]
+var range4 = array[...] // [10, 20, 14, 8, 30, 21]
+print(range4)
+
+
+```
