--- a/md/16.创建数组的方式.md
+++ b/md/16.创建数组的方式.md
@@ -131,6 +131,38 @@ var range2 = array[...4] // [10, 20, 14, 8, 30]
 var range3 = array[..<4] // [10, 20, 14, 8]
 var range4 = array[...] // [10, 20, 14, 8, 30, 21]
 print(range4)
+```
 
+## 数组重排
+
+```swift
+
+// 数组重排
+var array = [Int](1...8)
+// shuffled
+let array2 = array.shuffled()
+print(array) // 原数组未改变
+print(array2) // 新数组重排
+// reversed
+let array3 = array.reversed()
+print(array3)
+// partition
+let index = array.partition(by: {$0 > 5})
+print(index)
+let arr1 = array[..<index]
+let arr2 = array[index...]
+print(arr1) // [1, 2, 3, 4, 5]
+print(arr2) // [6, 7, 8]
+var array4 = [20,12,4,9,32,17,22]
+// sort
+array4.sort()
+print(array4) // [4, 9, 12, 17, 20, 22, 32]
+var array5 = [20,12,4,9,32,17,22]
+// sorted
+let sorted = array5.sorted()
+print(sorted) // [4, 9, 12, 17, 20, 22, 32]
+// swapAt
+array5.swapAt(0, array5.endIndex - 1)
+print(array5) // [22, 12, 4, 9, 32, 17, 20]
 
 ```
