--- a/md/16.创建数组的方式.md
+++ b/md/16.创建数组的方式.md
@@ -166,3 +166,17 @@ array5.swapAt(0, array5.endIndex - 1)
 print(array5) // [22, 12, 4, 9, 32, 17, 20]
 
 ```
+
+## 数组拼接
+
+```swift
+// 数组拼接
+var array = ["hello", "world"]
+
+print(array.joined()) // helloworld
+print(array.joined(separator: ",")) // hello,world
+
+let nestedArray = [[2,3,4], [7,8,9]]
+let array1 = nestedArray.joined(separator: [])
+print(Array(array1)) // [2, 3, 4, 7, 8, 9]
+```
