--- a/md/18.Set.md
+++ b/md/18.Set.md
@@ -32,3 +32,44 @@ let personSet:Set<Person> = [Person(name: "aaa", age: 19)]
 print(personSet)
 
 ```
+
+## Set 常用操作
+
+```swift
+
+// set 排序
+for c in set.sorted() {
+    print(c)
+}
+
+
+struct Person {
+    var name: String
+    var age: Int
+}
+
+extension Person: Hashable {
+    func hash(into hasher: inout Hasher) {
+        hasher.combine(age)
+        hasher.combine(name)
+    }
+}
+// 重载 == 运算符
+extension Person: Equatable {
+    static func == (left: Self, right: Self) -> Bool {
+        return left.name == right.name
+    }
+}
+var set1:Set<Person> = [Person(name: "aaa", age: 10),Person(name: "bbb", age: 10)]
+// 更新
+set1.update(with: Person(name: "aaa", age: 20)) // 有相同元素更新
+// 插入
+//set1.update(with: Person(name: "ccc", age: 20)) // 没有相同元素，插入
+// 删除
+//set1.remove(Person(name: "bbb", age: 10))
+// 过滤
+print(set1.filter({ $0.age > 14 }))
+
+//print(set1)
+
+```
