--- a/md/18.Set.md
+++ b/md/18.Set.md
@@ -73,3 +73,35 @@ print(set1.filter({ $0.age > 14 }))
 //print(set1)
 
 ```
+
+## 集合
+
+```swift
+
+// 初始化 Set
+var set1: Set<Character> = ["a","b","c","d","e"]
+var set2: Set<Character> = ["a","b","d","f","g"]
+// 交集
+print(set1.intersection(set2))
+// 并集
+print(set1.union(set2))
+// 对称差集
+print(set1.symmetricDifference(set2))
+// 子集
+print(set1.subtracting(set2))
+
+var set3: Set<Character> = ["a","b","c"]
+// 是否是子集
+print(set3.isSubset(of: set1)) // true
+print(set3.isSubset(of: set2)) // false
+// 是否是超集
+print(set1.isSuperset(of: set3)) // true
+print(set2.isSuperset(of: set3)) // false
+// 是子集但不相等
+print(set3.isStrictSubset(of: set1)) // true
+// 是否有公共元素
+print(set1.isDisjoint(with: set3)) // false
+
+
+
+```
