--- a/md/20.函数.md
+++ b/md/20.函数.md
@@ -38,3 +38,67 @@ if let value = result {
 }
 
 ```
+
+## 函数形参
+
+```swift
+
+// 默认参数形式
+func add(num1: Int, num2: Int) -> Int {
+    return num1 + num2
+}
+// 调用方式
+let res1 = add(num1: 1, num2: 2)
+print(res1) // 3
+
+// 指定形参名
+func add1(one num1: Int, two num2: Int) -> Int {
+    return num1 + num2
+}
+// 传入指定形参名
+let res2 = add1(one: 1, two: 2)
+print(res2) // 3
+
+// 无形参名
+func add2(_ num1: Int, _ num2: Int) -> Int {
+    return num1 + num2
+}
+// 无需传参数名
+let res3 = add2(1, 2)
+print(res3) // 3
+
+// 默认参数
+func add3(_ num1: Int, _ num2: Int = 0) -> Int {
+    return num1 + num2
+}
+// 无需传参数名
+let res4 = add3(1)
+print(res4) // 1
+
+func add4(nums: Int ...) -> Int {
+    var sum = 0
+    
+    for val in nums {
+        sum += val
+    }
+    
+    return sum
+}
+
+let res5 = add4(nums: 1,2,3,4,5,6)
+print(res5) // 21
+
+var a = 10
+var b = 20
+
+func swap(_ a: inout Int, _ b: inout Int) {
+    let temp = a
+    a = b
+    b = temp
+}
+
+swap(&a, &b)
+
+print(a,b) // 20 10
+
+```
