feat: 传入函数类型参数

--- a/md/20.函数.md
+++ b/md/20.函数.md
@@ -102,3 +102,48 @@ swap(&a, &b)
 print(a,b) // 20 10
 
 ```
+
+## 传入函数类型参数
+
+```swift
+
+// 定义一个函数
+func swap(_ a: inout Int, _ b: inout Int) {
+    let temp = a
+    a = b
+    b = temp
+}
+
+var a = 10
+var b = 20
+// 函数复制
+let swapFunc: (inout Int, inout Int) -> ()  = swap
+
+swapFunc(&a, &b)
+print(a, b) // 20 10
+
+// 函数返回参数类型
+func chooseStepFunction(backward: Bool) -> (Int) -> Int {
+    func stepForward (step: Int) -> Int { return step + 1 }
+    func stepBackward (step: Int) -> Int { return step - 1 }
+    
+    return backward ? stepBackward : stepForward
+}
+
+let num = -4
+
+let stepFunction = chooseStepFunction(backward: num < 0)
+
+print(stepFunction(num)) // -5
+
+// 打印内部函数调用值
+func printMathResult (_ mathFunction: (Int, Int) -> Int, _ a: Int, _ b: Int) {
+    print(mathFunction(a, b))
+}
+func add(_ a: Int, _ b: Int) -> Int {
+    return a + b
+}
+// 传递一个函数作为参数
+printMathResult(add, 1, 2) // 3
+
+```
