feat: 闭包捕获值

--- a/md/21.闭包.md
+++ b/md/21.闭包.md
@@ -32,3 +32,28 @@ let sort6 = arrays.sorted($0 > $1)
 
 
 ```
+
+
+## 闭包捕获值
+
+```swift
+
+func makeIncreaseFacotry (_ amount: Int = 0) -> () -> Int {
+    var sum: Int = 0
+    func incrementer() -> Int {
+         sum += amount
+        return sum
+    }
+    return incrementer
+}
+
+let increment10 = makeIncreaseFacotry(10)
+print(increment10()) // 10
+print(increment10()) // 20
+print(increment10()) // 30
+
+// 引用类型
+let anotherIncrement = increment10
+print(anotherIncrement()) // 40
+
+```
