feat: 逃逸闭包和自动闭包

--- a/md/21.闭包.md
+++ b/md/21.闭包.md
@@ -57,3 +57,40 @@ let anotherIncrement = increment10
 print(anotherIncrement()) // 40
 
 ```
+
+## 逃逸闭包和自动闭包
+
+```swift
+
+var names = ["aa","bb","cc","dd"]
+
+var providers: [() -> String] = []
+
+// 逃逸闭包1
+func collectCusumer (_ provider: @escaping () -> String) {
+    providers.append(provider)
+}
+
+collectCusumer({ names.remove(at: 0) })
+collectCusumer({ names.remove(at: 0) })
+
+
+// 自动闭包
+func collectCusumer2 (_ provider: @autoclosure @escaping () -> String) {
+    providers.append(provider)
+}
+
+collectCusumer2(names.remove(at: 0)) // 不需要大括号
+collectCusumer2(names.remove(at: 0)) // 不需要大括号
+
+
+
+print(names.count) // 4
+
+for provider in providers {
+    print(provider())
+}
+
+
+print(names.count) // 2
+```
