feat: 函数式编程

--- a/md/23.函数式编程.md
+++ b/md/23.函数式编程.md
@@ -43,3 +43,34 @@ func frequence2(_ words: String) -> [String: Int] {
 print(frequence2(str))
 
 ```
+
+## 函数式编程
+
+```swift
+
+let arr = ["aaa", "bbb", "ccc", "d", "ddd", "eee", "a", "fff"];
+
+func toUpperCase(names: [String]) -> String {
+    
+    var result: String = ""
+    
+    for name in names {
+        if name.count > 1 {
+            // 首字母大写
+            result += name.capitalized(with: Locale.current) + ","
+        }
+    }
+    return result
+}
+
+print(toUpperCase(names: arr)) // Aaa,Bbb,Ccc,Ddd,Eee,Fff,
+
+
+// 函数式编程
+let result = arr.filter{ $0.count > 1 }
+    .map{ $0.capitalized(with: Locale.current) }
+    .joined(separator: ",")
+
+print(result) // Aaa,Bbb,Ccc,Ddd,Eee,Fff
+
+```
